# example-apache-arrow-pybind11-cmake

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  environment.yml  setup.py
.github/workflows/: ci.yml
src/: example.cpp
tests/: test_arrow_pybind_example.py
